# server_programs

./: .gitignore  CMakeLists.txt  Makefile  README.md  TECH_DOC.md  build_all.sh  clear.sh  config.json  execute.sh  install_pkgs.sh  interface_config.h  server.cpp  server_app
Client/: CMakeLists.txt
Client/inc/: core.h
Client/src/: client.cpp  core.cpp
Global/: CMakeLists.txt
Global/inc/Config/: app_config.h  client_config.h  config.h  interface_config.h  log_config.h  srv_config.h
Global/inc/Log/: logger.h
Global/inc/Network/: net_defines.h  net_helper.h
Global/inc/Package/: package.h
Global/src/Config/: app_config.cpp  client_config.cpp  config.cpp  log_config.cpp  srv_config.cpp
Global/src/Log/: logger.cpp
Global/src/Network/: net_helper.cpp
Global/src/Package/: package.cpp
Server/: CMakeLists.txt
Server/inc/: core.h
Server/src/: core.cpp  server.cpp
_server_part/: Makefile  server.cpp  server_app
_server_part/global_config/: app_config.h  config.h  log_config.h  srv_config.h
_server_part/server/: srv.cpp  srv.h
_user_part/: Makefile  client.cpp  client_app  client_config.json
_user_part/client/: clnt.cpp  clnt.h
_user_part/global_config/: app_config.h  client_config.h  config.h
global_config/: interface_config.h  srv_config.h
net_helper/: net_helper.cpp  net_helper.h
package/: package.cpp
server/: Makefile  config.json  server_app  srv.cpp  srv.h
server/global_config/: app_config.h  config.h  log_config.h  srv_config.h
server/log/: logger.h
server/net_helper/: net_helper.h
server/server/: srv.cpp
srv/: config.json  server.cpp  server_app
srv/log/: logger.cpp
srv/server/: srv.cpp  srv.h
